syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package com.paulmandal.atak.forwarder.protobufs;

option java_outer_classname = "ProtobufMedevac";

import "detail/medevac/mists_map.proto";

message Medevac {
  string title = 1;
  int32 zoneProtSelection = 2;

  string freq = 3;

  int32 urgent = 4;
  int32 priority = 5;
  int32 routine = 6;

  bool hoist = 7;
  bool ventilator = 8;
  bool equipmentOther = 9;
  bool extractionEquipment = 10;
  bool equipmentNone = 11;
  string equipmentDetail = 12;

  int32 litter = 13;
  int32 ambulatory = 14;

  int32 security = 15;

  int32 hlzMarking = 16;

  int32 nonusCivilian = 17;
  int32 usCivilian = 18;
  int32 child = 19;
  int32 epw = 20;
  int32 usMilitary = 21;
  int32 nonusMilitary = 22;

  bool terrainSlope = 23;
  bool terrainRough = 24;
  bool terrainNone = 25;
  bool terrainOther = 26;
  bool terrainLoose = 27;
  string terrainOtherDetail = 28;
  string terrainSlopeDir = 29; // TODO: move to map (N,S,E,W)

  string medlineRemarks = 30;

  string markedBy = 31;
  string obstacles = 32; // TODO: can be subst from flow-tags
  string windsAreFrom = 33;
  string friendlies = 34;
  string enemy = 35;
  string hlzRemarks = 36;
  string hlzOther = 37;

  bool casevac = 38;
  MistsMap zMistsMap = 39;
}
