syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package com.paulmandal.atak.forwarder.protobufs;

option java_outer_classname = "ProtobufMistsMap";

import "detail/medevac/mist.proto";

message MistsMap {
  repeated Mist zMist = 1;
}
